# aoc2021

./: CMakeLists.txt  aoc2021.cpp  aocDay.cpp
day01/: Day01.cpp  Day01.h  day01_test.cpp
day02/: Day02.cpp  Day02.h  day02_test.cpp
utils/: utils.cpp  utils.h
